--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Project Title"
-subtitle: "INFO 526 - Summer 2024 - Final Project"
+subtitle: "INFO 526 - Summer 2025 - Final Project"
 author: 
-  - name: "Team name"
+  - name: "Seismic Minds"
     affiliations:
       - name: "School of Information, University of Arizona"
 description: "Project description"
@@ -15,6 +15,7 @@ editor: visual
 execute:
   warning: false
   echo: false
+  render-on-save: true
 ---
 
 ## Abstract
