--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Project title"
-subtitle: "INFO 526 - Summer 2024 - Final Project"
-author: "Author names"
+subtitle: "INFO 526 - Summer 2025 - Final Project"
+author: "Cedric Destin & Weston Scott"
 title-slide-attributes:
   data-background-image: images/watercolour_sys02_img34_teacup-ocean.jpg
   data-background-size: stretch
@@ -14,6 +14,7 @@ format:
 editor: visual
 execute:
   echo: false
+  render-on-save: true
 ---
 
 ```{r}
@@ -64,7 +65,7 @@ data("penguins")
 
 You can use plain text
 
-::: columns
+::::: columns
 ::: {.column width="40%"}
 -   or bullet points[^1]
 :::
@@ -72,7 +73,7 @@ You can use plain text
 ::: {.column width="60%"}
 or in two columns
 :::
-:::
+:::::
 
 [^1]: And add footnotes
 
@@ -102,7 +103,7 @@ penguins |>
 
 ## Plot and text
 
-::: columns
+::::: columns
 ::: {.column width="50%"}
 -   Some text
 
@@ -119,7 +120,7 @@ penguins |>
   theme(legend.key.size = unit(0.8, "cm"))
 ```
 :::
-:::
+:::::
 
 # A new section...
 
