Updated quarto files.

--- a/about.qmd
+++ b/about.qmd
@@ -6,7 +6,7 @@ execute:
     render-on-save: true
 ---
 
-This project was developed by **\[Team Name\]** For [INFO 526 - Data Analysis and Visualization](https://datavizaz.org/) at the University of Arizona, taught by Dr. Greg Chism. The team is comprised of the following team members.
+This project was developed by **Seismic Minds** for [INFO 526 - Data Analysis and Visualization](#0) at the University of Arizona, taught by Dr. Greg Chism. The team is comprised of the following team members.
 
 -   Cedric Destin: One sentence description of Team member 1 (e.g., year, major, etc.).
 
