--- a/about.qmd
+++ b/about.qmd
@@ -10,4 +10,4 @@ This project was developed by **Seismic Minds** for [INFO 526 - Data Analysis an
 
 -   Cedric Destin: One sentence description of Team member 1 (e.g., year, major, etc.).
 
--   Weston Scott: One sentence description of Team member 2 (e.g., year, major, etc.).
+-   Weston Scott: I am an Algorithms and Signal Processing Engineer in my second to last semester for my Master's in Electrical and Computer Engineering program. (e.g., year, major, etc.).
