--- a/project_question_2.qmd
+++ b/project_question_2.qmd
@@ -19,9 +19,10 @@ if (!require("pacman"))
 # Use pacman::p_load to install and load CRAN packages
 pacman::p_load(
     dplyr,
-    gganimate,
+    # gganimate,
     ggplot2,
     ggthemes,
+    ggspatial,
     glue,
     grid,
     gridExtra,
@@ -32,6 +33,7 @@ pacman::p_load(
     openintro,
     readr,
     scales,
+    sf,
     tidyverse,
     viridis
 )
@@ -66,7 +68,7 @@ vesuvius_data <- vesuvius_data |>
         time = as.POSIXct(time, format = "%Y-%m-%d %H:%M:%S"),
         date = as.Date(time),
         time = hms::as_hms(time)
-    ) |> glimpse()
+    )
 
 vesuvius_data_filtered <- vesuvius_data |>
     drop_na(
@@ -74,6 +76,21 @@ vesuvius_data_filtered <- vesuvius_data |>
         longitude, 
         depth_km, 
         duration_magnitude_md
+    ) |>
+    mutate(
+        depth_boundary = case_when(depth_km < 1 ~ "< 1 km",
+                                   depth_km < 2 ~ "< 2 km",
+                                   depth_km < 3 ~ "< 3 km",
+                                   depth_km < 4 ~ "< 4 km",
+                                   depth_km < 5 ~ "< 5 km",
+                                   TRUE ~ "> 5 km"),
+        depth_boundary = factor(depth_boundary, 
+                                levels = c("< 1 km", 
+                                           "< 2 km", 
+                                           "< 3 km", 
+                                           "< 4 km", 
+                                           "< 5 km", 
+                                           "> 5 km"))
     ) |> glimpse()
 ```
 
@@ -116,17 +133,23 @@ min_depth <- min(vesuvius_data$depth_km, na.rm = TRUE)
 
 print(paste("Maximum depth (km):", max_depth))
 print(paste("Minimum depth (km):", min_depth))
+
+max_mag <- max(vesuvius_data$duration_magnitude_md, na.rm = TRUE)
+min_mag <- min(vesuvius_data$duration_magnitude_md, na.rm = TRUE)
+
+print(paste("Maximum Magnitude:", max_mag))
+print(paste("Minimum Magnitude:", min_mag))
 ```
 
 ```{r}
 vesuvius_data_filtered <- vesuvius_data_filtered |>
+    group_by(depth_boundary) |>
     mutate(
-        depth_boundary = cut(depth_km,
-                             breaks = seq(0, max(depth_km, na.rm = TRUE) + 1, by = 1),
-                             right = FALSE, 
-                             include.lowest = TRUE,
-                             labels = paste0("< ", seq(1, max(depth_km, na.rm = TRUE) + 1, by = 1), " km"))
-    ) |> glimpse()
+        depth_rescaled = rescale(depth_km, to = c(1, 10)),
+        mag_rescaled = rescale(duration_magnitude_md, to = c(0.3, 0.9))
+    ) |>
+    arrange(depth_boundary, desc(depth_rescaled)) |>
+    ungroup()
 ```
 
 ```{r}
@@ -134,60 +157,18 @@ ggplot(
     vesuvius_data_filtered,
     aes(x = longitude, y = latitude)
 ) +
-geom_point(
-    aes(color = duration_magnitude_md),
-        # alpha = abs(depth_km)),
-    size = 2
-) +
-scale_color_viridis_c(
-    option = "magma",
-    name = "Magnitude"
-) +
-# scale_alpha_continuous(
-#     name = "Depth (km)",
-#     range = c(0.1, 0.8)
-# ) +
-facet_wrap(~ depth_boundary, ncol = 1) +
-coord_fixed() +
-scale_x_continuous(
-    limits = c(14.3, 14.5),
-    expand = c(0, 0)
-) +
-scale_y_continuous(
-    limits = c(40.75, 40.9),
-    expand = c(0, 0)
-) +
-labs(
-    title = "Seismic Events at Mount Vesuvius",
-    subtitle = "Faceted by Depth Category\nPoint Color = Magnitude, Transparency = Depth",
-    x = "Longitude",
-    y = "Latitude",
-    caption = NULL,
-    Depth = NULL
-) +
-theme(
-    strip.text = element_blank(),        # remove facet labels
-    panel.spacing = unit(1, "lines"),    # increase space between facets
-    axis.title = element_text(size = 14),# larger axis titles
-    axis.text = element_text(size = 12)  # larger axis tick labels
-)
-```
 
-```{r}
-ggplot(
-    vesuvius_data_filtered,
-    aes(x = longitude, y = latitude)
-) +
 geom_point(
-    aes(color = duration_magnitude_md),
-    size = 2
+    aes(color = duration_magnitude_md, 
+        size = depth_rescaled,
+        alpha = mag_rescaled)
 ) +
+scale_size_identity() +
 scale_color_viridis_c(
     option = "magma",
     name = "Magnitude"
 ) +
-facet_wrap(~ depth_boundary, ncol = 1) +
-theme(plot.margin = unit(c(1, 2, 1, 2), "cm")) +
+facet_wrap(~ depth_boundary, ncol = 2, scales = "free_y") +
 scale_x_continuous(
     limits = c(14.3, 14.5),
     expand = c(0, 0)
@@ -205,6 +186,49 @@ labs(
 theme(
     panel.spacing = unit(1, "lines"),
     axis.title = element_text(size = 14),
-    axis.text = element_text(size = 12)
+    axis.text = element_text(size = 12),
+    plot.margin = unit(c(0.1, 0.1, 0.1, 0.1), "cm")
+
+) +
+guides(alpha = "none")
+```
+
+```{r}
+ggplot(
+    vesuvius_data_filtered,
+    aes(x = longitude, y = latitude)
+) +
+annotation_map_tile(zoom = 10, type = "osm") +
+geom_point(
+    aes(color = duration_magnitude_md, 
+        size = depth_rescaled,
+        alpha = mag_rescaled)
+) +
+scale_size_identity() +
+scale_color_viridis_c(
+    option = "magma",
+    name = "Magnitude"
+) +
+facet_wrap(~ depth_boundary, ncol = 2) +
+scale_x_continuous(
+    limits = c(14.3, 14.5),
+    expand = c(0, 0)
+) +
+scale_y_continuous(
+    limits = c(40.75, 40.9),
+    expand = c(0, 0)
+) +
+labs(
+    title = "Seismic Events at Mount Vesuvius",
+    subtitle = "Faceted by Depth Category\nPoint Color = Magnitude",
+    x = "Longitude",
+    y = "Latitude"
+) +
+theme(
+    panel.spacing = unit(1, "lines"),
+    axis.title = element_text(size = 14),
+    axis.text = element_text(size = 12),
+    plot.margin = unit(c(0.1, 0.1, 0.1, 0.1), "cm")
+
 )
 ```
